# AirShare

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  tauri.conf.json
icons/: icon.icns
src/: main.rs  mdns.rs  nearby_share.rs
ui/: index.html
