[package]
name = "airshare"
version = "0.1.0"
edition = "2021"

[dependencies]
mdns-sd = "0.8.1"
rand = "0.8.5"
base64 = "0.21.4"
prost = "0.12"
openssl = { version = "0.10.57", features = ["vendored"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
hkdf = "0.12.3"
sha2 = "0.10.7"
crypto-bigint = "0.5.3"
num = "0.4.1"
cbc = "0.1.2"
aes = "0.8.3"
hmac-sha256 = "1.1.7"
local-ip-address = "0.5.6"
tauri = { version = "1.5.1", features = [
    "window-all",
    "notification-all",
    "system-tray",
    "notification",
], optional = true }
whoami = "1.4.1"
auto-launch = "0.5.0"
notify-rust = "4.9.0"
tokio = { version = "1", features = ["full"] }
network-interface = "1.1.1"


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.51.0"
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
home = "0.5.5"
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23.1" }
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25.0" }
objc = { version = "0.2.7" }
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }

[build-dependencies]
prost-build = { version = "0.12" }
tauri-build = { version = "1.5.0", features = [], optional = true }


[features]
custom-protocol = ["tauri/custom-protocol"]
docker = []
tauri-app = ["tauri", "tauri-build"]
